@@ -379,8 +379,8 @@ and repotool) are on your $PATH.
 
 Create a scratch directory for your conversion work.
 
-Run "<<repotool.adoc#,repotool initialize>>" in the scratch directory;
-it requires that you follow the initialize verb with a project name.
+Run "<<repotool.adoc#,repotool makemake>>" in the scratch directory;
+it requires that you follow the makemake verb with a project name.
 This will create a Makefile designed to sequence your conversion, and
 an empty lift script. Then set the variables near the top
 appropriately for your project.
@@ -3434,7 +3434,7 @@ that the "<<history_cmd>>" command exists and can dump your command history
 to a file.
 
 (d) If you were using the standard-workflow Makefile generated by
-"<<repotool.adoc#,repotool>> initialize", mention that in your bug
+"<<repotool.adoc#,repotool>> makemake", mention that in your bug
 report.  If you modified the Makefile, include a copy with the bug
 report.
 
