@@ -1,11 +1,12 @@
 #!/bin/sh
-## Test repotool initialize, svn->hg
+## Test repotool makemake, cvs->git
 
 mkdir /tmp/test-workdir$$
-cd /tmp/test-workdir$$ >/dev/null || ( echo "$0: cd failed" >&2; exit 1 )
-${REPOTOOL:-repotool} initialize xyzzy svn hg >/tmp/out$$
+cd /tmp/test-workdir$$ || ( echo "$0: cd failed"; exit 1 )
+${REPOTOOL:-repotool} makemake xyzzy cvs git >/tmp/out$$
 echo Return code: $? >>/tmp/out$$
-cd - >/dev/null || ( echo "$0: cd failed" >&2; exit 1 )
+# shellcheck disable=2064
+cd - >/dev/null || ( echo "$0: cd failed"; exit 1 )
 ./dir-md5 /tmp/test-workdir$$ >>/tmp/out$$
 
 # shellcheck disable=SC1091
