@@ -1,8 +1,8 @@
 #!/bin/sh
-## Test repotool initialize, svn->git
+## Test repotool makemake, svn->git
 
 mkdir /tmp/test-workdir$$
-(cd /tmp/test-workdir$$ >/dev/null || ( echo "$0: cd failed" >&2; exit 1 ); ${REPOTOOL:-repotool} initialize xyzzy svn git >/tmp/out$$; echo Return code: $? >>/tmp/out$$)
+(cd /tmp/test-workdir$$ >/dev/null || ( echo "$0: cd failed" >&2; exit 1 ); ${REPOTOOL:-repotool} makemake xyzzy svn git >/tmp/out$$; echo Return code: $? >>/tmp/out$$)
 ./dir-md5 /tmp/test-workdir$$ >>/tmp/out$$
 
 # shellcheck disable=SC1091
