@@ -15,6 +15,7 @@ Repository head::
      Macro argument formal change from {0}, {1}, {2}... to %{0}, %{1}, %{2}...
      Move to Go-style match references (${1}) from Python ones (\1).
      Simplifued syntax of solit command.
+     repotool initialize becomes repotool makemake.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
